--- a/scss/css/styles.css
+++ b/scss/css/styles.css
@@ -41,7 +41,7 @@
 }
 
 .text-px {
-  padding: 0rem 2.3125rem;
+  padding: 0rem 1.6125rem;
 }
 
 .btn {
@@ -71,6 +71,7 @@ body {
   font-family: "Spartan";
   font-size: 0.75rem;
   color: black;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -181,7 +182,7 @@ a {
 
 @-webkit-keyframes carousel {
   0% {
-    opacity: 0;
+    opacity: 0.7;
   }
   100% {
     opacity: 1;
@@ -190,7 +191,7 @@ a {
 
 @keyframes carousel {
   0% {
-    opacity: 0;
+    opacity: 0.7;
   }
   100% {
     opacity: 1;
@@ -327,6 +328,10 @@ a {
   }
 }
 
+.hero {
+  max-width: 100vw;
+}
+
 .hero__carousel {
   position: relative;
   top: 0px;
@@ -435,14 +440,20 @@ a {
 
 .hero__grid-image {
   display: block;
-  height: 14.8125rem;
   margin: 0px auto;
+  width: 100%;
 }
 
 @media (min-width: 65em) {
   .hero__grid-image {
     width: 25%;
     height: 100%;
+  }
+}
+
+@media (min-width: 34em) {
+  .hero__grid-image {
+    width: 45rem;
   }
 }
 
